--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "@angular/platform-browser": "11.0.5",
     "@angular/platform-browser-dynamic": "11.0.5",
     "@angular/router": "11.0.5",
+    "@briebug/jest-schematic": "^3.1.0",
     "rxjs": "6.6.3",
     "tslib": "2.0.3",
     "zone.js": "0.10.3"
   },
   "devDependencies": {
+    "@angular-builders/jest": "11.0.0",
     "@angular-devkit/build-angular": "0.1100.5",
     "@angular-eslint/builder": "0.8.0-beta.7",
     "@angular-eslint/eslint-plugin": "0.8.0-beta.7",
@@ -33,6 +35,7 @@
     "@angular/cli": "11.0.5",
     "@angular/compiler-cli": "11.0.5",
     "@types/jasmine": "3.6.2",
+    "@types/jest": "26.0.19",
     "@types/node": "12.19.11",
     "@typescript-eslint/eslint-plugin": "4.3.0",
     "@typescript-eslint/parser": "4.3.0",
@@ -43,11 +46,8 @@
     "eslint-plugin-prefer-arrow": "1.2.2",
     "jasmine-core": "3.6.0",
     "jasmine-spec-reporter": "5.0.2",
-    "karma": "5.1.1",
-    "karma-chrome-launcher": "3.1.0",
+    "jest": "26.6.3",
     "karma-coverage": "2.0.3",
-    "karma-jasmine": "4.0.1",
-    "karma-jasmine-html-reporter": "1.5.4",
     "protractor": "7.0.0",
     "ts-node": "8.3.0",
     "typescript": "4.0.5"
